{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 474,
  "lineage": "fab6d6ce-7462-06ff-50c1-e6b7cac6ec60",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06371c9f2ad704460",
            "arn": "arn:aws:ec2:us-east-1:243981758611:instance/i-0c2b8377ec4dc5ec6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "us-east-1-team1--ec2-instance-profile",
            "id": "i-0c2b8377ec4dc5ec6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "dms",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edc9ed13f978b7b0",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-34-227-14-96.compute-1.amazonaws.com",
            "public_ip": "34.227.14.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c5f3070bdc300ba",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0685a9155fb3397ca",
            "tags": {
              "Name": "default-us-east-1-jump-server-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "default-us-east-1-jump-server-1",
              "Project": "team1",
              "environment": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056b4c17bd0a70239"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2-profile",
            "module.iam.aws_iam_role.role",
            "module.network.aws_eip.nat-eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.app-rt",
            "module.network.aws_route_table.database-rt",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_route_table_association.app-subnet-association",
            "module.network.aws_route_table_association.database-subnet-association",
            "module.network.aws_route_table_association.public-subnet-association",
            "module.network.aws_security_group.app-sg",
            "module.network.aws_security_group.database-sg",
            "module.network.aws_security_group.public-sg",
            "module.network.aws_subnet.app-subnets",
            "module.network.aws_subnet.database-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc",
            "module.network.aws_vpc_endpoint.ec2",
            "module.sftp.aws_s3_bucket.sftp-bucket",
            "module.sftp.aws_s3_bucket_acl.sftp",
            "module.sftp.aws_transfer_server.service_managed"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql-database-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03682cbe3aba12927",
            "arn": "arn:aws:ec2:us-east-1:243981758611:instance/i-0b81bfee0915c97b9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "us-east-1-team1--ec2-instance-profile",
            "id": "i-0b81bfee0915c97b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "dms",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2ce13e170a51866",
            "private_dns": "ip-10-0-11-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 2000,
                "throughput": 0,
                "volume_id": "vol-0b1aa28868d540259",
                "volume_size": 500,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09435f48a9176fd13",
            "tags": {
              "Name": "default-us-east-1-sql-database-server",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "default-us-east-1-sql-database-server",
              "Project": "team1",
              "environment": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d99b22dd25f09ee"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2-profile",
            "module.iam.aws_iam_role.role",
            "module.network.aws_eip.nat-eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.app-rt",
            "module.network.aws_route_table.database-rt",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_route_table_association.app-subnet-association",
            "module.network.aws_route_table_association.database-subnet-association",
            "module.network.aws_route_table_association.public-subnet-association",
            "module.network.aws_security_group.app-sg",
            "module.network.aws_security_group.database-sg",
            "module.network.aws_security_group.public-sg",
            "module.network.aws_subnet.app-subnets",
            "module.network.aws_subnet.database-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc",
            "module.network.aws_vpc_endpoint.ec2",
            "module.sftp.aws_s3_bucket.sftp-bucket",
            "module.sftp.aws_s3_bucket_acl.sftp",
            "module.sftp.aws_transfer_server.service_managed"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3f4a874f857bdb3",
            "association_id": "eipassoc-09d2231d21dbb0988",
            "domain": "vpc",
            "id": "eipalloc-0b3f4a874f857bdb3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c18448068ca235d",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-3-227-63-8.compute-1.amazonaws.com",
            "public_ip": "3.227.63.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004719abbc545a97e",
            "association_id": "eipassoc-0f5a94365ac1caaa0",
            "domain": "vpc",
            "id": "eipalloc-004719abbc545a97e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0670c6a4c33eba7f6",
            "private_dns": "ip-10-0-2-215.ec2.internal",
            "private_ip": "10.0.2.215",
            "public_dns": "ec2-34-239-235-101.compute-1.amazonaws.com",
            "public_ip": "34.239.235.101",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d85368c4924732a5",
            "association_id": "eipassoc-0126dce4958859a08",
            "domain": "vpc",
            "id": "eipalloc-0d85368c4924732a5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-029445d3a2cd51188",
            "private_dns": "ip-10-0-3-237.ec2.internal",
            "private_ip": "10.0.3.237",
            "public_dns": "ec2-34-195-192-75.compute-1.amazonaws.com",
            "public_ip": "34.195.192.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:internet-gateway/igw-016018edba6406d4f",
            "id": "igw-016018edba6406d4f",
            "owner_id": "243981758611",
            "tags": {
              "Name": "-us-east-1-igw",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "-us-east-1-igw",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3f4a874f857bdb3",
            "connectivity_type": "public",
            "id": "nat-01126fa28cde12037",
            "network_interface_id": "eni-02c18448068ca235d",
            "private_ip": "10.0.1.49",
            "public_ip": "3.227.63.8",
            "subnet_id": "subnet-0685a9155fb3397ca",
            "tags": {
              "Name": "us-east-1-nat-gw-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-nat-gw-1",
              "Project": "team1",
              "environment": "default"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004719abbc545a97e",
            "connectivity_type": "public",
            "id": "nat-08ab8968c9621ba20",
            "network_interface_id": "eni-0670c6a4c33eba7f6",
            "private_ip": "10.0.2.215",
            "public_ip": "34.239.235.101",
            "subnet_id": "subnet-06a36890324a87965",
            "tags": {
              "Name": "us-east-1-nat-gw-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-nat-gw-2",
              "Project": "team1",
              "environment": "default"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d85368c4924732a5",
            "connectivity_type": "public",
            "id": "nat-030e19272032e741b",
            "network_interface_id": "eni-029445d3a2cd51188",
            "private_ip": "10.0.3.237",
            "public_ip": "34.195.192.75",
            "subnet_id": "subnet-0d61680fe451b0994",
            "tags": {
              "Name": "us-east-1-nat-gw-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-nat-gw-3",
              "Project": "team1",
              "environment": "default"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-03edd0b68cf06c450",
            "id": "rtb-03edd0b68cf06c450",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01126fa28cde12037",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-app-rt-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-rt-1",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-03daf2bfe17c30f5a",
            "id": "rtb-03daf2bfe17c30f5a",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08ab8968c9621ba20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-app-rt-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-rt-2",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-0a171907a20aa8e8e",
            "id": "rtb-0a171907a20aa8e8e",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-030e19272032e741b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-app-rt-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-rt-3",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-0c40948dd9fe08509",
            "id": "rtb-0c40948dd9fe08509",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01126fa28cde12037",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-database-rt-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-rt-1",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-001a0c0216360b029",
            "id": "rtb-001a0c0216360b029",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08ab8968c9621ba20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-database-rt-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-rt-2",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-0143dbda34d919207",
            "id": "rtb-0143dbda34d919207",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-030e19272032e741b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-database-rt-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-rt-3",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:route-table/rtb-013cbcf00dae5afb5",
            "id": "rtb-013cbcf00dae5afb5",
            "owner_id": "243981758611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016018edba6406d4f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-public-rt",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-public-rt",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d00fb6ef8b944424",
            "route_table_id": "rtb-03edd0b68cf06c450",
            "subnet_id": "subnet-09435f48a9176fd13"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.app-rt",
            "module.network.aws_subnet.app-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fd47db446e8dc8",
            "route_table_id": "rtb-03daf2bfe17c30f5a",
            "subnet_id": "subnet-044e2a311bc5ca92e"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.app-rt",
            "module.network.aws_subnet.app-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2d55b7b2f28bd34",
            "route_table_id": "rtb-0a171907a20aa8e8e",
            "subnet_id": "subnet-04e7db5cf8d04465e"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.app-rt",
            "module.network.aws_subnet.app-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad0ae7076099c82",
            "route_table_id": "rtb-0c40948dd9fe08509",
            "subnet_id": "subnet-0cdc3f3354a897c85"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.database-rt",
            "module.network.aws_subnet.database-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c18f327570b5e094",
            "route_table_id": "rtb-001a0c0216360b029",
            "subnet_id": "subnet-05ab00755f1543bb0"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.database-rt",
            "module.network.aws_subnet.database-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195da7fa93e838da",
            "route_table_id": "rtb-0143dbda34d919207",
            "subnet_id": "subnet-0976a8c9e058a2b0a"
          },
          "dependencies": [
            "module.network.aws_eip.nat-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.database-rt",
            "module.network.aws_subnet.database-subnets",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a0844d59b50a87",
            "route_table_id": "rtb-013cbcf00dae5afb5",
            "subnet_id": "subnet-0685a9155fb3397ca"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad3224bb5d9c728",
            "route_table_id": "rtb-013cbcf00dae5afb5",
            "subnet_id": "subnet-06a36890324a87965"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bad068242879673",
            "route_table_id": "rtb-013cbcf00dae5afb5",
            "subnet_id": "subnet-0d61680fe451b0994"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.public-subnets",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:security-group/sg-01d99b22dd25f09ee",
            "description": "Allow access from jump/alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d99b22dd25f09ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows Amazon RDS Aurora (MySQL) Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows SQL Server Access",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows SQL Server Access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "allow rdp from jump server",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056b4c17bd0a70239"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "default-us-east-1-app-sg",
            "name_prefix": "",
            "owner_id": "243981758611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-us-east-1-app-sg",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "default-us-east-1-app-sg",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public-sg",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:security-group/sg-0a41879dbd8e62172",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a41879dbd8e62172",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allows SQL Server Access",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "default-us-east-1-database_sg",
            "name_prefix": "",
            "owner_id": "243981758611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-us-east-1-database-sg",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "default-us-east-1-database-sg",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:security-group/sg-056b4c17bd0a70239",
            "description": "Allow public access to jump",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b4c17bd0a70239",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow rdp access",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "default-us-east-1-public-sg",
            "name_prefix": "",
            "owner_id": "243981758611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-us-east-1-public-sg",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "default-us-east-1-public-sg",
              "Project": "team1",
              "environment": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-09435f48a9176fd13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09435f48a9176fd13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-app-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-044e2a311bc5ca92e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044e2a311bc5ca92e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-app-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-04e7db5cf8d04465e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e7db5cf8d04465e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-app-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-app-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-0cdc3f3354a897c85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdc3f3354a897c85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-database-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-05ab00755f1543bb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.122.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ab00755f1543bb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-database-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-0976a8c9e058a2b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.133.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0976a8c9e058a2b0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-database-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-database-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-0685a9155fb3397ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0685a9155fb3397ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-public-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-public-subnet-1",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-06a36890324a87965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a36890324a87965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-public-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-public-subnet-2",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:subnet/subnet-0d61680fe451b0994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d61680fe451b0994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243981758611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-public-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-public-subnet-3",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:vpc/vpc-08d99dd3935e41c09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc7f845a6173840a",
            "default_route_table_id": "rtb-084565cdbc2e14179",
            "default_security_group_id": "sg-07ff214a777158cc0",
            "dhcp_options_id": "dopt-bcadb2c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d99dd3935e41c09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084565cdbc2e14179",
            "owner_id": "243981758611",
            "tags": {
              "Name": "team1-vpc",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "team1-vpc",
              "Project": "team1",
              "environment": "default"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243981758611:vpc-endpoint/vpce-01e264e55a03ea3d5",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01e264e55a03ea3d5",
            "ip_address_type": "ipv4",
            "owner_id": "243981758611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a41879dbd8e62172"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "tags": {
              "Name": "us-east-1-vpc-endpoint",
              "Project": "team1",
              "environment": "default"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-endpoint",
              "Project": "team1",
              "environment": "default"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08d99dd3935e41c09"
          },
          "dependencies": [
            "module.network.aws_security_group.database-sg",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}